--- a/notebooks/model_monitoring.ipynb
+++ b/notebooks/model_monitoring.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "f4833905",
+   "metadata": {},
+   "source": [
+    "# Using deepchecks to validate data and monitor models in time"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "id": "c343c9b6",
@@ -13,13 +21,12 @@
     "from sklearn.metrics import classification_report\n",
     "from deepchecks.tabular import Dataset\n",
     "from deepchecks.tabular.suites import train_test_validation\n",
-    "from deepchecks.tabular.suites import model_evaluation\n",
-    "\n"
+    "from deepchecks.tabular.suites import model_evaluation"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "4f0bb5f8",
    "metadata": {},
    "outputs": [],
@@ -30,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "ed39604f",
    "metadata": {},
    "outputs": [],
@@ -40,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "bc507f7c",
    "metadata": {},
    "outputs": [
@@ -305,7 +312,7 @@
        "[13572 rows x 13 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -316,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "e819dea3",
    "metadata": {},
    "outputs": [
@@ -334,7 +341,7 @@
        " 'income']"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -346,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "b9c7b47a",
    "metadata": {},
    "outputs": [],
@@ -360,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "bf6e76ab",
    "metadata": {},
    "outputs": [
@@ -386,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "17ead80d",
    "metadata": {},
    "outputs": [],
@@ -397,7 +404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "535028b7",
    "metadata": {},
    "outputs": [
@@ -448,19 +455,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "9cc6d392",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "80aee5b1591d4f1c84d93f8a8a7f5f02",
+       "model_id": "28c332724faa4f029fea8651fe6e2273",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Accordion(children=(VBox(children=(HTML(value='\\n<h1 id=\"summary_0VVRSLYTQA01HO58HAFU5AGH9\">Train Test Validat…"
+       "Accordion(children=(VBox(children=(HTML(value='\\n<h1 id=\"summary_7IQSZ8HQ1Q65O8DEN2L8KOTSU\">Train Test Validat…"
       ]
      },
      "metadata": {},
@@ -473,17 +480,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "0205d64d",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'report.html'"
+       "'report (1).html'"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -494,19 +501,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "id": "9f358e48",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "be68fdfc9c114d0a95dbd91c2c5c9e47",
+       "model_id": "a60788d863084138ac98c78b6942e4fb",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Accordion(children=(VBox(children=(HTML(value='\\n<h1 id=\"summary_7BXZ1BHCFTWJMGI98FEADAAB7\">Train Test Validat…"
+       "Accordion(children=(VBox(children=(HTML(value='\\n<h1 id=\"summary_KT12W554L1146DX8H90RWVCB9\">Train Test Validat…"
       ]
      },
      "metadata": {},
@@ -519,7 +526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "40a45ace",
    "metadata": {},
    "outputs": [
@@ -569,19 +576,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "f6b024ab",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "12b1ff5a687e40e989439a85ecbb8e5d",
+       "model_id": "2e7395c21cd546ed98cb32252dfb6488",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Accordion(children=(VBox(children=(HTML(value='\\n<h1 id=\"summary_CYKR1KBDIENP48TTDGMP19LCR\">Model Evaluation S…"
+       "Accordion(children=(VBox(children=(HTML(value='\\n<h1 id=\"summary_TUIS51XMPUS90N1UB7JF5F0TP\">Model Evaluation S…"
       ]
      },
      "metadata": {},
@@ -601,7 +610,7 @@
     {
      "data": {
       "text/plain": [
-       "'model_report (1).html'"
+       "'model_report (2).html'"
       ]
      },
      "execution_count": 15,
@@ -624,9 +633,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "ge39",
    "language": "python",
-   "name": "python3"
+   "name": "ge39"
   },
   "language_info": {
    "codemirror_mode": {
@@ -638,7 +647,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.10"
+   "version": "3.9.16"
   }
  },
  "nbformat": 4,
