--- a/notebooks/shap-explanations.ipynb
+++ b/notebooks/shap-explanations.ipynb
@@ -2,10 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "b877af67",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[31mERROR: Invalid requirement: 'catboost,'\u001b[0m\u001b[31m\r\n",
+      "\u001b[0m\r\n",
+      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m A new release of pip available: \u001b[0m\u001b[31;49m22.3.1\u001b[0m\u001b[39;49m -> \u001b[0m\u001b[32;49m24.2\u001b[0m\r\n",
+      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m To update, run: \u001b[0m\u001b[32;49mpip install --upgrade pip\u001b[0m\r\n"
+     ]
+    },
     {
      "name": "stderr",
      "output_type": "stream",
@@ -25,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "c343c9b6",
    "metadata": {},
    "outputs": [],
@@ -35,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "4f0bb5f8",
    "metadata": {},
    "outputs": [],
@@ -46,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "ed39604f",
    "metadata": {},
    "outputs": [],
@@ -56,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "bc507f7c",
    "metadata": {},
    "outputs": [
@@ -321,7 +331,7 @@
        "[13572 rows x 13 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -332,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "e819dea3",
    "metadata": {},
    "outputs": [
@@ -349,7 +359,7 @@
        " 'native_country']"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -364,14 +374,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "b9c7b47a",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Training baseline model\n",
     "clf = CatBoostClassifier(cat_features=cat_feat, \n",
-    "                         n_estimators=100, \n",
+    "                         n_estimators=10, \n",
+    "                         max_depth=1,\n",
     "                         verbose=False).fit(Xtrain.drop(['income'],axis=1),\n",
     "                                            Xtrain['income'])"
    ]
@@ -443,7 +454,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "c6b50491",
+   "id": "9c9f9c9e",
    "metadata": {},
    "outputs": [
     {
